components/plex/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-svc
  namespace: plex
spec:
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400
