components/plex/svc_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: plex
spec:
  ports:
  - nodePort: 32400
    port: 32400
  selector:
    app: plex
  type: NodePort
