components/plex/svc_nodeport_bak.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: plex
spec:
  clusterIP: 10.43.202.220
  ports:
  - nodePort: 32400
    port: 32400
  selector:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
  type: NodePort
