components/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: plex.myplayk8s.live
    http:
      paths:
      - path: /
        backend:
          serviceName: plex-svc
          servicePort: 32400
